kubernetes/common/hapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: hapi
  name: hapi
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: hapi
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.network: "true"
        io.kompose.service: hapi
    spec:
      containers:
      - image: eoscostarica506/hapi
        imagePullPolicy: ""
        name: eosrate-hapi
        ports:
        - containerPort: 3005
        volumeMounts:
        - mountPath: /opt/application
          name: hapi1
          subPathExpr: $(CODE_DIRECTORY)
      restartPolicy: Always
      volumes:
      - name: hapi1
        nfs:
          server: NFS-server
          path: /home/ubuntu/
