kubernetes/common/hasura-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: hasura
  name: hasura
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: hasura
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.network: "true"
        io.kompose.service: hasura
    spec:
      containers:
      - args:
        - graphql-engine
        - serve
        - --enable-console
        image: hasura/graphql-engine:v1.2.0-beta.4.cli-migrations
        imagePullPolicy: "Always"
        name: eosrate-hasura
        ports:
        - containerPort: 8088
        volumeMounts:
        - mountPath: /hasura-migrations
          name: hasura1
          subPathExpr: $(MIGRATION_DIRECTORY)
      restartPolicy: Always
      volumes:
      - name: hasura1
        nfs:
          server: nfs-server-new
          path: /home/ubuntu/
