kubernetes/common/pgweb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: pgweb
  name: pgweb
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: pgweb
  template:
    metadata:
      labels:
        io.kompose.network: "true"
        io.kompose.service: pgweb
    spec:
      containers:
      - env:
        - name: DATABASE_URL
          value: postgres://user:pass@postgres:5432/eosrate?sslmode=disable
        image: sosedoff/pgweb:latest
        imagePullPolicy: "Always"
        name: eosrate-pgweb
        ports:
        - containerPort: 8081
      restartPolicy: Always
