kubernetes/common/hapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: hapi
  name: hapi
spec:
  ports:
  - name: "3005"
    port: 3005
    targetPort: 3005
  selector:
    io.kompose.service: hapi
