kubernetes/common/hasura-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: hasura
  name: hasura
spec:
  ports:
  - name: "8088"
    port: 8088
    targetPort: 8080
  selector:
    io.kompose.service: hasura
